--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
         }
 
         .card:hover {
-            transform: translateY(-10px) scale(1.02);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            transform: translateY(-10px) scale(1.03);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
         }
 
         .card::before {
@@ -1085,8 +1085,7 @@
         const footer = document.querySelector('footer');
         observer.observe(footer);
 
-        
-        });
+        // Add floating effect to cards on mouse move
     </script>
 </body>
 </html>
