--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Cá Nhân Game Thủ</title>
+    <title>🇻🇳WEBSITE KIYOSHI AOV × CHIẾN HAY MOD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap">
     <style>
@@ -786,7 +786,7 @@
                     </div>
                     <div class="platform-info">
                         <div class="platform-name">TikTok</div>
-                        <div class="platform-desc">Video ngắn hấp dẫn</div>
+                        <div class="platform-desc">Nhé Theo Giõi Nhé Cảm Ơn ae🤭</div>
                     </div>
                 </a>
                 <a href="#" class="other-link" data-link="ytb1">
@@ -816,8 +816,8 @@
         <div class="profile-container floating">
             <img src="avatar/av.png" alt="Profile Picture" class="profile-pic">
         </div>
-        <h1>NGUYỄN VĂN A</h1>
-        <p class="title blink-text">🎮 Content Creator | Game Reviewer | YouTube & TikTok</p>
+        <h1>VIET CHIẾN</h1>
+        <p class="title blink-text">🎮 Thủ Thuật | Hack - Mod Game | YouTube & TikTok</p>
         
         <div class="marquee-text">
             "Nắng nóng đã có điều hòa, hết tiền đã có fake bill lo"
@@ -831,9 +831,9 @@
             <section class="card">
                 <div class="card-content">
                     <h2>Giới Thiệu</h2>
-                    <p>Xin chào! Tôi là một người đam mê game và sáng tạo nội dung. Kênh YouTube của tôi tập trung vào hướng dẫn chơi game, đánh giá game và chia sẻ những mẹo hay cho game thủ.</p>
-                    <p>Với kinh nghiệm 5 năm trong ngành, tôi đã giúp hàng ngàn game thủ cải thiện kỹ năng và tận hưởng trải nghiệm chơi game tốt hơn.</p>
-                    <p>Hãy kết nối với tôi qua các nền tảng dưới đây!</p>
+                    <p>Xin chào! Tôi là một người đam mê game và sáng tạo nội dung😋. mod skin chất lượng giống như thật và mình sẽ cố gắng phát triển để cho nhiều người biết đến hơn cảm ơn mọi người đã ủng hộ mình nha hihi.</p>
+                    <p>Nhớ Thích Đăng Kí Và Chia Sẻ Video để mình có thêm động lực ra nhiều ví dụ đẳng cấp hơn nha..</p>
+                    <p>Hãy kết nối với tôi qua các nền tảng dưới đây! 😘</p>
                 </div>
             </section>
 
@@ -848,15 +848,15 @@
                         </a>
                         <a href="#" class="link-item">
                             <i class="fab fa-tiktok"></i>
-                            <span>TikTok Gaming Shorts</span>
+                            <span>TikTok của tôi</span>
                         </a>
                         <a href="#" class="link-item">
                             <i class="fab fa-facebook"></i>
-                            <span>Nhóm Zalo Game Thủ</span>
+                            <span>Nhóm Zalo hãy vào để được hỗ trợ nhé !</span>
                         </a>
                         <a href="#" class="link-item">
                             <i class="fab fa-discord"></i>
-                            <span>Cộng đồng Discord</span>
+                            <span>Cộng đồng Discord [ Chưa có ]</span>
                         </a>
                     </div>
                 </div>
@@ -865,9 +865,9 @@
             <!-- Featured Videos -->
             <section class="card">
                 <div class="card-content">
-                    <h2>Video Nổi Bật</h2>
+                    <h2>HƯỚNG DẪN CÀI MOD CƠ BẢN</h2>
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Featured Video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://youtu.be/owsi7fgQgPc?si=WRUZ4Rf0lF1uBSt0" title="Featured Video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -908,7 +908,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2023 Trang Cá Nhân Game Thủ. Tất cả quyền được bảo lưu.</p>
+        <p>© 2025-2026 Kiyoshi AOV.</p>
         <div class="social-links">
             <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
@@ -951,8 +951,8 @@
             const toast = document.createElement('div');
             toast.className = 'toast-notification';
             toast.textContent = body.classList.contains('dark-mode') 
-                ? 'Bạn đang ở chế độ: Ban đêm' 
-                : 'Bạn đang ở chế độ: Ban ngày';
+                ? '🌚Bạn đang ở chế độ: Ban đêm' 
+                : '🌝Bạn đang ở chế độ: Ban ngày';
             document.body.appendChild(toast);
             
             setTimeout(() => {
@@ -1034,9 +1034,9 @@
                 welcomeBox.className = 'welcome-box';
                 welcomeBox.innerHTML = `
                     <div class="welcome-content">
-                        <h3>CẢM ƠN BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA TÔI</h3>
+                        <h3>CẢM ƠN BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA TÔI🌚🌝</h3>
                         <p>HIHI</p>
-                        <button id="welcome-ok">OK</button>
+                        <button id="welcome-ok">OK😁</button>
                     </div>
                 `;
                 document.body.appendChild(welcomeBox);
