--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
         <p class="title blink-text">🎮 Thủ Thuật | Hack - Mod Game | YouTube & TikTok</p>
         
         <div class="marquee-text">
-            "Nắng nóng đã có điều hòa, hết tiền đã có fake bill lo"
+            "CHIEN PRO MAX HEHE"
         </div>
     </header>
 
